# ha-smarter-integration

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  install-pdm.py  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: constraints.txt  labeler.yml  linting.yml  release-drafter.yml  tests.yaml  tests.yml
custom_components/smarter/: __init__.py  binary_sensor.py  config_flow.py  const.py  descriptions.py  entity.py  manifest.json  number.py  sensor.py  services.py  services.yaml  smarter_hub.py  switch.py
custom_components/smarter/devices/: __init__.py  smarter_coffee_SMCOF01.yaml  smarter_kettle_SMKET01.yaml
custom_components/smarter/helpers/: base.py  config.py  device_config.py  smarter_coffee_v2.py  smarter_kettle_v3.py
custom_components/smarter/translations/: en.json
device-logs/: report.txt  report2.txt
scripts/: setup.sh
smarter/: __init__.py  binary_sensor.py  const.py  manifest.json  number.py  switch.py
tests/: __init__.py  conftest.py  const.py  helpers.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_number.py  test_schemas.py  test_sensor.py  test_switch.py
