[project]
dependencies = ["smarter-client>=0.3.0-dev.3", "homeassistant>=2024.11.3"]
requires-python = "~=3.12.4"
readme = "README.md"
license = { text = "MIT" }
name = "homeassistant-smarter"
version = "0.4.0-dev.0"
description = "Default template for PDM package"
authors = [{ name = "Kirill Birger", email = "kbirger@gmail.com" }]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest-homeassistant-custom-component>=0.13.183",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
testing = [
    "pytest-homeassistant-custom-component>=0.13.183",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]
linting = ["pre-commit>=3.8.0", "ruff>=0.6.5"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
format = "ruff format"
lint = "ruff check"
test = "pytest -v  --doctest-modules --junitxml=coverage/test-results.xml --cov --cov-report=xml --cov-report=html"
test-ci = "pytest --timeout=9 --durations=10 -n auto -p no:sugar tests"

[tool.pylint]
disable = ['no-name-in-module']

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."
addopts = ["--allow-unix-socket"]

[tool.ruff]
target-version = "py312"
src = ["custom_components"]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
]
line-length = 120
[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = ["D", "E", "F", "W", "I", "UP", "R"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
